--- a/scpxf-connector/pom.xml
+++ b/scpxf-connector/pom.xml
@@ -33,6 +33,8 @@
 		</dependency>
 
 		<!-- start custom -->
+		
+	
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -59,6 +61,10 @@
 			<groupId>org.bouncycastle</groupId>
 			<artifactId>bcpkix-jdk15on</artifactId>
 			<version>1.61</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
 		</dependency>
 	</dependencies>
 
