--- a/scpxf-connector/pom.xml
+++ b/scpxf-connector/pom.xml
@@ -33,8 +33,8 @@
 		</dependency>
 
 		<!-- start custom -->
-		
-	
+
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -65,6 +65,11 @@
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>27.1-jre</version>
 		</dependency>
 	</dependencies>
 
